# hodgepodge

./: .gitignore  README.md  hodgepodge.sln
AzureCloudService1/: AzureCloudService1.ccproj  AzureCloudService1.sln  ServiceConfiguration.Cloud.cscfg  ServiceDefinition.csdef
AzureFunctionApp1/: AzureFunctionApp1.csproj  AzureFunctionApp1.sln  Pinyin.cs  Sing.cs  Speech.cs
CEbalance/: CEbalance.sln
CropperMagnetPlugin/: CropperMagnetPlugin.sln
EnableSurround/: EnableSurround.VC.db  EnableSurround.sln
ExpressionParser/: AnonymousMetaProperty.cs  AnonymousMetaType.cs  AnonymousTypeHelper.cs  CSharpExpressionGrammar.cs  DynamicAssemblyHolder.cs  ExpressionParser.cs  ExpressionParser.csproj  ExpressionParser.sln
GeckoTest/: GeckoTest.sln
Gif/: Gif.sln
GithubTest/: GithubTest.sln
ImageUtils/: ImageUtils.sln
MathConsole/: MathConsole.sln
MobileTest/: MobileTest.sln
MyMixerChat/: MyMixerChat.sln
OBB/: OBB.sln  UdpNotify.cs
SpeechTest/: MainWindow.xaml  MainWindow.xaml.cs  SpeechTest.csproj  packages.config
TOTPTest/: TOTPTest.sln
TunnelMonitor/: TunnelMonitor.sln
ValidateIncomeTax/: Program.cs  ValidateIncomeTax.csproj
WOLTest/: WOLTest.sln
WindowUtils/: WindowUtils.sln
WorkingTime/: WorkingTime.sln
clangtest/: clangtest.sln
cryptoTest/: Program.cs  cryptoTest.csproj
cvtest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  DisplayImage.vcxproj  DisplayImage.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  camera.cpp  cmake_install.cmake
d2c-tp/: d2c-tp.code-workspace
deamon/: Program.cs  (+1 more)
(+588 files in other folders)
